--- a/src/components/MovieCard/MovieCard.module.scss
+++ b/src/components/MovieCard/MovieCard.module.scss
@@ -31,4 +31,10 @@
       transform: translate(0, 0);
     }
   }
+  .buttons {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+  }
 }
