--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -21,7 +21,7 @@ $primary-dark: darken($primary, 10%);
 $primary-darker: darken($primary, 20%);
 $primary-darkest: darken($primary, 30%);
 $secondary-dark: darken($secondary, 10%);
-
+$gray: lighten($dark, 30%);
 $input-btn-padding-y: 0.75rem;
 $input-btn-padding-x: 1rem;
 $input-btn-font-size: 1.25rem;
